Fixed fancy-box headline alignment, made article timestamp a bit darker

--- a/css/screen.less
+++ b/css/screen.less
@@ -70,6 +70,7 @@ h2 {
     font-family: @fontstack_headline;
     font-size: 2.8em;
     font-weight: 300;
+    text-align: left;
 }
 
 h3 {
@@ -274,7 +275,7 @@ header[role=banner] {
         background: #fbfbfb;
         margin: 0 0 2em;
         font-size: 1em;
-        .rotate(-4deg);
+        .rotate(-2deg);
 
         &:nth-child(odd) {
             .rotate(3deg);
@@ -292,7 +293,7 @@ header[role=banner] {
                 padding: 0.5em;
                 margin: 0 0 1em;
                 font-size: 1.6em;
-                color: #888;
+                color: #666;
                 border-bottom: 1px dashed #ddd;
             }
         }
